refactor: collapse api module (#99)
* refactor: collapse api module -- DefaultStream record, dedup tests, remove deprecated Builder.enableMetrics

DefaultStream -> recor
- Convert from class to record. 11 explicit field declarations + 11
  constructor assignments + 9 trivial accessors -> all auto-generated.
  Single canonical constructor, two delegating constructors for
  single-topic vs Collection<String> input
- Adding a new fluent setter is now a one-place change: declare the
  component, add the with* method, reference it in
  DefaultSink.buildPipeline if it affects pipeline construction
- validateTopics: single-pass -- drop the redundant LinkedHashSet
  intermediate, iterate once for null/blank validation, single
  Set.copyOf for the immutable result. Insertion-order claim was
  vestigial (Set.copyOf doesn't preserve it; no caller depends on it)

KPipe.java
- Trim repetitive class- and method-level Javadoc while keeping
  @param / @return tags so the published javadoc jar stays clean
- Factor the inline custom() default sink into a private loggingSink()
  helper

Test cleanup
- ToConsoleDispatchTest: 6 nearly-identical toConsole() dispatch tests
  collapsed into one @ParameterizedTest with a MethodSource. Kept the
  3 distinct focused tests (avro-no-schema-throws, toCustom, toMulti)
- KPipeFacadeBuildTest: drop 5 trivial XfactoryReturnsStream tests
  (covered by ToConsoleDispatchTest's parameterized run + the full
  chainingWithoutStartingDoesNotThrow case) and 1 operator-order
  test that overlapped with StreamCompositionTest. 14 -> 9 tests in
  the file
- KPipeApiTest, KPipeBytesConsoleSinkTest, KPipeFacadeIntegrationTest,
  StreamCompositionTest: minor lint/formatting touch-ups from the
  record conversion

Deprecation purge
- Delete KPipeConsumer.Builder.enableMetrics(boolean), the only
  @Deprecated method in the codebase. Migrate all 9 callers:
  3 example apps drop the no-op .enableMetrics(true), 4 tests drop
  the same, 3 tests with .enableMetrics(false